--- a/scss/_design_system.scss
+++ b/scss/_design_system.scss
@@ -28,9 +28,10 @@ p {
 
 /*Navegación*/
 
-.nav {
-
+.nav-principal {
+  
 }
+
 
 
 /*Botones*/
@@ -162,6 +163,8 @@ p {
 .color11 {
   background: white;
 }
+
+/*Footer*/
 
 footer {
   display: flex;
