--- a/scss/_design_system.scss
+++ b/scss/_design_system.scss
@@ -1,43 +1,110 @@
 * {
   font-family: 'Mali', cursive;
+  margin: 0;
 }
 
 h1 {
   font-size: 75px;
-  font-weight: 600;
   font-style: italic;
+  font-weight: 600;
 }
 
 h2 {
   font-size: 64px;
-  font-weight: 500;
   font-style: italic;
+  font-weight: 500;
 }
 
 h3 {
   font-size: 40px;
-  font-weight: 500;
   font-style: italic;
+  font-weight: 500;
 }
 
 p {
   font-size: 32px;
-  font-weight: 500;
   font-style: italic;
+  font-weight: 500;
 }
 
+.design-text p{
+  margin: 20px;
+}
 /*Navegación*/
+.nav-principal ul{
+  list-style: none;
+  display: flex;
+  justify-content: space-around;
+  margin-top: 65px;
+  margin-bottom: 75px;
+}
 
-.nav-principal {
+.nav-principal a{
+  text-decoration: none;
+  color: black;
+  font-style: italic;
+  font-weight: 700;
+  font-size: 32px;
+}
+
+.nav-principal a:hover {
+  transition: all  0.2s;
+  text-shadow: 5px 5px 6px rgba(0, 0, 0, 0.36);
+}
+
+.nav-principal svg:hover {
+  box-shadow: 5px 5px 6px rgba(0, 0, 0, 0.36);
+}
+
+.search-input {
+  display: flex;
+  align-items: center;
+  margin-left: 750px;
   
 }
 
+.search-input__bar{
+  box-shadow: 5px 5px 6px rgba(0, 0, 0, 0.36);
+  min-height: 75px;
+  min-width: 500px;
+  padding: 10px 5px;
+  font-size: 15px;
+  border: none;
+  background: #FFF8DB;
+  border-radius: 87px 0px 0px 87px ;
+}
 
+.search-input__bar::placeholder {
+  padding-left: 37px;
+  font-style: italic;
+  font-weight: 500;
+  font-size: 32px;
+}
+
+.button--submit {
+  box-shadow: 5px 5px 6px rgba(0, 0, 0, 0.36);
+  min-height: 65px;
+  padding: 5px 50px;
+  border: none;
+  border-radius: 0px 87px 87px 0px ;
+  background: #FFF8DB;
+  transition: background-color .3s ease-in-out;
+  width: 30px;
+}
+
+.search-input__bar:focus {
+  padding-left: 37px;
+  font-style: italic;
+  font-weight: 500;
+  font-size: 32px;
+  outline: none;
+}
 
 /*Botones*/
 .button-white--big {
   background: white;
   border-radius: 25px;
+  border: none;
   box-shadow: 10px 12px 7px -1px rgba(0, 0, 0, 0.25);
   color: black;
   font-size: 44px;
@@ -45,14 +112,12 @@ p {
   font-weight: 700;
   padding: 18px;
   text-decoration: none;
-  border: none;
 }
 
-
 .button-white--small {
-  border: none;
   background: white;
   border-radius: 19px;
+  border: none;
   box-shadow: 10px 12px 7px -1px rgba(0, 0, 0, 0.25);
   color: black;
   font-size: 23px;
@@ -62,61 +127,65 @@ p {
   text-decoration: none;
 }
 
-.button-yellow--small {
-  color: black;
-  text-decoration: none;
-  font-weight: 500;
-  font-size: 30px;
-  padding: 10px 40px;
-  background: #FEEB9C;
-  border-radius: 20px;
-  box-shadow: 10px 12px 7px -1px rgba(0, 0, 0, 0.25);
-}
-
-.button-yellow--small2 {
-  color: black;
-  text-decoration: none;
-  font-weight: 500;
-  font-size: 30px;
-  padding: 10px 40px;
-  background: #FFF8DB;
-  border-radius: 20px;
-  box-shadow: 10px 12px 7px -1px rgba(0, 0, 0, 0.25);
-}
-
-
 .button-white--x {
   background: white;
   border-radius: 42px;
+  border: none;
   box-shadow: 10px 12px 7px -1px rgba(0, 0, 0, 0.25);
   color: black;
   font-size: 55px;
   font-weight: 500;
   padding: 5px 40px;
   text-decoration: none;
-  border: none;
 }
 
-.button-white--x:hover {
+.button-white--big:hover, .button-white--small:hover, .button-white--x:hover {
   background: #D6D6D6;
+  transition: all  0.2s;
 }
 
-/*
-.form-input1 {
-  padding: 12px 120px;
-  border: none;
-  background: #FFF8DB;
-  box-shadow: 10px 12px 7px -1px rgba(0, 0, 0, 0.25);
-  border-radius: 23px;
+.button-white--big:active, .button-white--small:active, .button-white--x:hover {
+  background: #C0C0C0;
+  color: white;
 }
-*/
+
+.button-yellow--small {
+  background: #FEEB9C;
+  border-radius: 20px;
+  box-shadow: 10px 12px 7px -1px rgba(0, 0, 0, 0.25);
+  color: black;
+  font-size: 30px;
+  font-weight: 500;
+  padding: 10px 40px;
+  text-decoration: none;
+}
+
+.button-yellow--small2 {
+  background: #FFF8DB;
+  border-radius: 20px;
+  box-shadow: 10px 12px 7px -1px rgba(0, 0, 0, 0.25);
+  color: black;
+  font-size: 30px;
+  font-weight: 500;
+  padding: 10px 40px;
+  text-decoration: none;
+}
+
+.button-yellow--small:hover, .button-yellow--small2:hover {
+  background: #DFC764;
+  transition: all  0.2s;
+}
+
+.button-yellow--small:active, .button-yellow--small2:active {
+  background: #C6B058;
+  color: white;
+}
 
 /*Paleta Colores*/
-
 .color-containers {
-  width: 5%;
   border: 1px solid black;
   padding: 15px 10px;
+  width: 5%;
 }
 
 .color1 {
@@ -165,21 +234,21 @@ p {
 }
 
 /*Footer*/
-
 footer {
-  display: flex;
-  justify-content: space-between;
+  padding: 0;
   align-items: center;
   background: #4E4E4E;
   color: white;
+  display: flex;
+  justify-content: space-between;
   padding: 50px;
 }
 
 .footer__questions ul {
   align-items: center;
-  text-decoration: none;
-  list-style: none;
   font-size: 24px;
+  list-style: none;
+  text-decoration: none;
 }
 
 .footer__copyright {
@@ -190,8 +259,8 @@ footer {
 }
 
 .footer__social {
-  text-align: center;
-  position: relative;
   margin-right: 50px;
+  position: relative;
+  text-align: center;
   top: -45px;
 }
