--- a/css/styles.css
+++ b/css/styles.css
@@ -28,10 +28,6 @@ p {
   font-weight: 500;
 }
 
-.design-text p {
-  margin: 20px;
-}
-
 /*Navegación*/
 .nav-principal ul {
   list-style: none;
@@ -61,7 +57,7 @@ p {
 .search-input {
   display: flex;
   align-items: center;
-  margin-left: 750px;
+  margin-left: 650px;
 }
 
 .search-input__bar {
@@ -71,7 +67,7 @@ p {
   padding: 10px 5px;
   font-size: 15px;
   border: none;
-  background: #FFF8DB;
+  background: #fff8DB;
   border-radius: 87px 0px 0px 87px;
 }
 
@@ -88,7 +84,7 @@ p {
   padding: 5px 50px;
   border: none;
   border-radius: 0px 87px 87px 0px;
-  background: #FFF8DB;
+  background: #fff8DB;
   transition: background-color 0.3s ease-in-out;
   width: 30px;
 }
@@ -141,17 +137,17 @@ p {
 }
 
 .button-white--big:hover, .button-white--small:hover, .button-white--x:hover {
-  background: #D6D6D6;
+  background: #d6d6d6;
   transition: all 0.2s;
 }
 
 .button-white--big:active, .button-white--small:active, .button-white--x:hover {
-  background: #C0C0C0;
+  background: #c0c0c0;
   color: white;
 }
 
 .button-yellow--small {
-  background: #FEEB9C;
+  background: #feeb9c;
   border-radius: 20px;
   box-shadow: 10px 12px 7px -1px rgba(0, 0, 0, 0.25);
   color: black;
@@ -162,7 +158,7 @@ p {
 }
 
 .button-yellow--small2 {
-  background: #FFF8DB;
+  background: #fff8db;
   border-radius: 20px;
   box-shadow: 10px 12px 7px -1px rgba(0, 0, 0, 0.25);
   color: black;
@@ -173,12 +169,12 @@ p {
 }
 
 .button-yellow--small:hover, .button-yellow--small2:hover {
-  background: #DFC764;
+  background: #dfc764;
   transition: all 0.2s;
 }
 
 .button-yellow--small:active, .button-yellow--small2:active {
-  background: #C6B058;
+  background: #c6b058;
   color: white;
 }
 
@@ -190,15 +186,15 @@ p {
 }
 
 .color1 {
-  background: #C6B058;
+  background: #c6b058;
 }
 
 .color2 {
-  background: #DFC764;
+  background: #dfc764;
 }
 
 .color3 {
-  background: #FEEB9C;
+  background: #feeb9c;
 }
 
 .color4 {
@@ -206,7 +202,7 @@ p {
 }
 
 .color5 {
-  background: #FFF8DB;
+  background: #fff8dB;
 }
 
 .color6 {
@@ -215,19 +211,19 @@ p {
 }
 
 .color7 {
-  background: #D9D9D9;
+  background: #4e4e4e;
 }
 
 .color8 {
-  background: #6A6A6A;
+  background: #6a6a6a;
 }
 
 .color9 {
-  background: #C0C0C0;
+  background: #c0c0c0;
 }
 
 .color10 {
-  background: #D6D6D6;
+  background: #d6d6d6;
 }
 
 .color11 {
@@ -266,8 +262,243 @@ footer {
   top: -45px;
 }
 
+#wrapper {
+  width: 100%;
+  height: 100%;
+  background-image: url(../img/Fondo.png);
+  background-repeat: no-repeat;
+}
+
+.content {
+  margin: 0 auto;
+  width: 90%;
+}
+
+.principal-ad {
+  margin-top: 150px;
+  padding: 75px 0px 75px 75px;
+  width: 60%;
+  background: #FEEB9C;
+  box-shadow: 10px 12px 7px -1px rgba(0, 0, 0, 0.25);
+  border-radius: 84px;
+}
+
+.principal-ad h1 {
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
+  margin-bottom: 40px;
+}
+
+.principal-ad p {
+  font-weight: bold;
+  margin-bottom: -15px;
+}
+
+.principal-ad a {
+  padding: 30px 40px;
+  margin-top: 30px;
+  margin-left: 575px;
+}
+
+.second-ad {
+  padding-bottom: 150px;
+}
+
+.second-ad--box {
+  position: relative;
+  margin: 0 auto;
+  text-align: center;
+  margin-top: 150px;
+  padding-bottom: 150px;
+  padding: 20px 0px 20px 20px;
+  width: 75%;
+  background: #FEEB9C;
+  box-shadow: 10px 12px 7px -1px rgba(0, 0, 0, 0.25);
+  border-radius: 36px;
+}
+
+.second-ad--box a {
+  position: absolute;
+  left: 550px;
+}
+
+.product-card {
+  margin-bottom: -320px;
+}
+
+.product-card--box {
+  padding: 0px 0px 60px 0px;
+  text-align: center;
+  width: 40%;
+  position: relative;
+  background: #feeb9c;
+  box-shadow: 10px 12px 7px -1px rgba(0, 0, 0, 0.25);
+  border-radius: 84px;
+  margin-top: 150px;
+}
+
+.product-card--box img:hover {
+  transition: all 1.2s;
+  transform: scale(1.1);
+}
+
+.product-card--box a {
+  position: absolute;
+  top: 520px;
+  left: 20px;
+}
+
+.product-card__small-box {
+  position: absolute;
+  width: 40%;
+  padding: 40px;
+  background: #fff8db;
+  border-radius: 160px 0px 86px;
+  bottom: 0;
+  right: 0;
+}
+
+.product-card__small-box:hover {
+  box-shadow: -5px -8px 7px rgba(0, 0, 0, 0.25);
+  transition: all 1s;
+}
+
+.product-card__box--white {
+  background-image: url(../img/blur-rectangle2.svg);
+  background-repeat: no-repeat;
+  text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.103);
+  text-align: center;
+  padding: 50px;
+  left: 750px;
+  bottom: 600px;
+  position: relative;
+  width: 45%;
+}
+
+.product-card__box--white button {
+  position: relative;
+  top: 60px;
+}
+
+.product-card--especifications, ul {
+  font-size: 32px;
+  font-style: italic;
+  font-weight: 500;
+  margin-top: 10px;
+  list-style: none;
+  padding-left: 50px;
+  text-align: start;
+}
+
+.about-us {
+  background-image: url(../img/blur-rectangle.svg);
+  background-repeat: no-repeat;
+  text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.103);
+  padding-bottom: 90px;
+  padding-top: 90px;
+}
+
+.about-us__content {
+  padding: 50px;
+  display: block;
+}
+
+.about-us h3 {
+  text-align: center;
+}
+
 .cart-page {
   width: 100vw;
+}
+
+.sections-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.section-container {
+  width: 1448px;
+  height: 518px;
+  margin: 39px 0 39px 0;
+}
+.section-container img {
+  width: 300px;
+  height: 300px;
+}
+
+.products-info-container {
+  display: flex;
+  justify-content: space-around;
+}
+
+.products-topic {
+  width: 666px;
+  height: 83px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.product-square {
+  width: 628px;
+  height: 422px;
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: center;
+  align-items: center;
+  background-color: #FEEB9C;
+  border-radius: 36px;
+  box-shadow: 10px 10px 12px #6a6a6a;
+}
+
+.price-square {
+  background-color: #fff8dB;
+  width: 284px;
+  height: 180px;
+  border-top-left-radius: 400px 200px;
+  border-bottom-right-radius: 36px;
+  position: relative;
+  top: -181px;
+  left: 343px;
+}
+
+.price-position {
+  position: relative;
+  top: 86px;
+  left: 79px;
+}
+
+.divs {
+  border: solid red;
+}
+
+.product-square__beige {
+  width: 628px;
+  height: 422px;
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: center;
+  align-items: center;
+  background-color: #FFF8DB;
+  border-radius: 36px;
+  box-shadow: 10px 10px 12px #6a6a6a;
+  margin-bottom: 20px;
+}
+
+.option-product {
+  position: relative;
+  top: -144px;
+  left: 452px;
+}
+
+.section-topic {
+  width: 1382px;
+  height: 83px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 356px;
+  margin-top: 200px;
 }
 
 /*# sourceMappingURL=styles.css.map */
