Se agrega página de contact

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -4,6 +4,6 @@
 @import 'about_us';
 @import 'cart-page';
 @import 'cart-page-empty';
-
+@import 'contact';
 @import 'products';
 @import 'sections';
