--- a/css/styles.css
+++ b/css/styles.css
@@ -50,10 +50,6 @@ p {
   text-shadow: 5px 5px 6px rgba(0, 0, 0, 0.36);
 }
 
-.nav-principal svg:hover {
-  box-shadow: 5px 5px 6px rgba(0, 0, 0, 0.36);
-}
-
 .search-input {
   display: flex;
   align-items: center;
@@ -71,7 +67,7 @@ p {
   border-radius: 87px 0px 0px 87px;
 }
 
-.search-input__bar::placeholder {
+.search-input__bar::placeholder, textarea {
   padding-left: 37px;
   font-style: italic;
   font-weight: 500;
@@ -138,12 +134,14 @@ p {
 
 .button-white--big:hover, .button-white--small:hover, .button-white--x:hover {
   background: #d6d6d6;
-  transition: all 0.2s;
+  transition: all 0.3s ease-in-out;
+  box-shadow: 2px 1px 16px 5px rgba(0, 0, 0, 0.404);
 }
 
 .button-white--big:active, .button-white--small:active, .button-white--x:hover {
   background: #c0c0c0;
   color: white;
+  transform: scale(0.8);
 }
 
 .button-yellow--small {
@@ -171,11 +169,39 @@ p {
 .button-yellow--small:hover, .button-yellow--small2:hover {
   background: #dfc764;
   transition: all 0.2s;
+  transition: all 0.3s ease-in-out;
+  box-shadow: 2px 1px 16px 5px rgba(0, 0, 0, 0.404);
 }
 
 .button-yellow--small:active, .button-yellow--small2:active {
   background: #c6b058;
   color: white;
+  transform: scale(0.8);
+}
+
+.contact__form label {
+  font-size: 32px;
+  font-style: italic;
+  font-weight: 500;
+  line-height: 42px;
+  padding: 15px;
+}
+
+.contact__input {
+  background: #fff8DB;
+  border-radius: 23px;
+  border: none;
+  box-shadow: 10px 12px 7px -1px rgba(0, 0, 0, 0.25);
+  font-size: 32px;
+  font-style: italic;
+  font-weight: 500;
+  min-height: 72px;
+  min-width: 400px;
+  padding: 15px;
+}
+
+.contact__input:focus {
+  outline: none;
 }
 
 /*Paleta Colores*/
@@ -408,6 +434,87 @@ footer {
 
 .cart-page {
   width: 100vw;
+}
+
+.contact h2 {
+  text-align: center;
+  margin-top: 150px;
+}
+
+.contact__form {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: 150px 320px;
+}
+
+.contact__form button {
+  margin-left: 450px;
+  margin-top: 130px;
+}
+
+.contact__form label, .contact__form--p {
+  display: block;
+  font-size: 32px;
+  font-style: italic;
+  font-weight: 500;
+  line-height: 42px;
+  padding: 15px;
+}
+
+.contact__input {
+  background: #fff8DB;
+  border-radius: 23px;
+  border: none;
+  box-shadow: 10px 12px 7px -1px rgba(0, 0, 0, 0.25);
+  font-size: 32px;
+  font-style: italic;
+  font-weight: 500;
+  margin-bottom: 90px;
+  min-height: 72px;
+  min-width: 400px;
+  padding: 15px;
+}
+
+.contact__input--email {
+  background: #fff8DB;
+  border-radius: 23px;
+  border: none;
+  box-shadow: 10px 12px 7px -1px rgba(0, 0, 0, 0.25);
+  font-size: 32px;
+  font-style: italic;
+  font-weight: 500;
+  margin-bottom: 90px;
+  min-height: 72px;
+  padding: 15px;
+  width: 1043px;
+}
+
+.contact__box-text {
+  background: #fff8DB;
+  border-radius: 25px;
+  border: none;
+  box-shadow: 10px 12px 7px -1px rgba(0, 0, 0, 0.25);
+  display: block;
+  margin-bottom: 20px;
+  min-height: 268px;
+  padding: 15px;
+  width: 1043px;
+}
+
+.contact__input:focus, .contact__input--email:focus, .contact__box-text:focus {
+  box-shadow: 2px 1px 16px 5px rgba(0, 0, 0, 0.404);
+  transition: all 0.3s ease-in-out;
+  outline: none;
+}
+
+.contact__input:hover, .contact__input--email:hover, .contact__input--email:hover, .contact__box-text:hover {
+  transition: all 0.3s ease-in-out;
+  box-shadow: 2px 1px 16px 5px rgba(0, 0, 0, 0.404);
+}
+
+.contact__input:active, .contact__input:valid, .contact__input--email:active, .contact__input--email:active, .contact__box-text:active, button:active {
+  transform: scale(0.8);
 }
 
 .sections-container {
