--- a/scss/_design_system.scss
+++ b/scss/_design_system.scss
@@ -49,10 +49,6 @@ p {
   text-shadow: 5px 5px 6px rgba(0, 0, 0, 0.36);
 }
 
-.nav-principal svg:hover {
-  box-shadow: 5px 5px 6px rgba(0, 0, 0, 0.36);
-}
-
 .search-input {
   display: flex;
   align-items: center;
@@ -70,7 +66,7 @@ p {
   border-radius: 87px 0px 0px 87px ;
 }
 
-.search-input__bar::placeholder {
+.search-input__bar::placeholder, textarea {
   padding-left: 37px;
   font-style: italic;
   font-weight: 500;
@@ -137,13 +133,16 @@ p {
 
 .button-white--big:hover, .button-white--small:hover, .button-white--x:hover {
   background: #d6d6d6;
-  transition: all  0.2s;
+  transition: all 0.3s ease-in-out;
+  box-shadow: 2px 1px 16px 5px rgba(0, 0, 0, 0.404);
 }
 
 .button-white--big:active, .button-white--small:active, .button-white--x:hover {
   background: #c0c0c0;
   color: white;
-}
+  transform: scale(0.80);
+}  
+
 
 .button-yellow--small {
   background: #feeb9c;
@@ -169,12 +168,39 @@ p {
 
 .button-yellow--small:hover, .button-yellow--small2:hover {
   background: #dfc764;
-  transition: all  0.2s;
+  transition: all  0.2s;  transition: all 0.3s ease-in-out;
+  box-shadow: 2px 1px 16px 5px rgba(0, 0, 0, 0.404);
 }
 
 .button-yellow--small:active, .button-yellow--small2:active {
   background: #c6b058;
-  color: white;
+  color: white;  
+  transform: scale(0.80);
+}
+
+.contact__form label {
+  font-size: 32px;
+  font-style: italic;
+  font-weight: 500;
+  line-height: 42px;
+  padding: 15px;
+}
+
+.contact__input {
+  background:#fff8DB;
+  border-radius: 23px;
+  border: none;
+  box-shadow: 10px 12px 7px -1px rgba(0, 0, 0, 0.25);
+  font-size: 32px;
+  font-style: italic;
+  font-weight: 500;
+  min-height: 72px;
+  min-width: 400px;
+  padding: 15px ;
+}
+
+.contact__input:focus {
+  outline: none;
 }
 
 /*Paleta Colores*/
