--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -5,5 +5,8 @@
 @import 'cart-page';
 @import 'cart-page-empty';
 @import 'contact';
-@import 'products';
-@import 'sections';
+@import 'pages/products';
+@import 'components/card-yellow';
+@import 'components/price-square';
+@import 'pages/sections';
+@import 'components/card-beige';
