--- a/scss/pages/_products.scss
+++ b/scss/pages/_products.scss
@@ -33,3 +33,29 @@
   top: 86px;
   left: 79px;
 }
+
+
+@media (min-width: 768px) and (max-width:960px){
+  .products-info-container {
+    display: flex;
+    justify-content: space-around;
+    width: 1290px;
+  }
+
+  .sections-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 1395px;
+  }
+  .section-container {
+    width: 1392px;
+    height: 518px;
+    margin: 39px 0 39px 0;
+  
+    img {
+      width: 70%;
+      height: 100%;
+    }
+  }
+}
