--- a/scss/pages/_sections.scss
+++ b/scss/pages/_sections.scss
@@ -13,3 +13,11 @@
   gap: 356px;
   margin-top: 200px;
 }
+
+@media (min-width: 768px) and (max-width:960px){
+  .option-product {
+    position: relative;
+    top: -144px;
+    left: 417px;
+  }
+}
