--- a/scss/components/_card-beige.scss
+++ b/scss/components/_card-beige.scss
@@ -10,17 +10,22 @@
   box-shadow: 10px 10px 12px #6a6a6a;
   margin-bottom: 20px;
 }
-@media (min-width: 768px) and (max-width:960px){
+
+@media (max-width: 640px) {
   .product-square__beige {
-    width: 580px;
+    width: 823px;
     height: 422px;
-    display: flex;
-    flex-direction: column-reverse;
-    justify-content: center;
-    align-items: center;
-    background-color: #FFF8DB;
-    border-radius: 36px;
-    box-shadow: 10px 10px 12px #6a6a6a;
-    margin-bottom: 20px;
+  }
+}
+
+@media (min-width: 641px) and (max-width:960px) {
+  .product-square__beige {
+    width: 525px;
+  }
+}
+
+@media (min-width: 961px) and (max-width:1024px) {
+  .product-square__beige {
+    width: 570px;
   }
 }
