--- a/scss/components/_price-square.scss
+++ b/scss/components/_price-square.scss
@@ -8,3 +8,24 @@
   top: -181px;
   left: 343px;
 }
+
+@media (max-width: 640px) {
+  .price-square {
+    top: -181px;
+    left: 537px;
+  }
+}
+
+@media (min-width: 641px) and (max-width:960px) {
+  .price-square {
+    top: -179px;
+    left: 240px;
+  }
+
+}
+
+@media (min-width: 961px) and (max-width:1024px) {
+  .price-square {
+    left: 285px;
+  }
+}
