--- a/scss/pages/_products.scss
+++ b/scss/pages/_products.scss
@@ -34,28 +34,94 @@
   left: 79px;
 }
 
+@media (max-width: 640px) {
+  #wrapper {
+    width: 1277px;
+  }
 
-@media (min-width: 768px) and (max-width:960px){
   .products-info-container {
-    display: flex;
-    justify-content: space-around;
-    width: 1290px;
+    display: block;
   }
 
-  .sections-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 1395px;
+  .section-container {
+    height: 1147px;
+    width: 814px;
   }
+
+  .nav-principal ul {
+    width: 1177px;
+  }
+
+  .search-input {
+    display: flex;
+    align-items: center;
+    margin-left: 361px;
+  }
+
+  .product-square__yellow {
+    width: 785px;
+    height: 422px;
+  }
+
+  footer {
+    width: 1229px;
+  }
+}
+
+@media (min-width: 641px) and (max-width:960px) {
+  #wrapper {
+    width: 1331px;
+  }
+
+  .nav-principal ul {
+    width: 1180px;
+  }
+
+  .search-input {
+    display: flex;
+    align-items: center;
+    margin-left: 361px;
+  }
+
+  .products-info-container {
+    width: 1302px;
+  }
+
   .section-container {
     width: 1392px;
-    height: 518px;
-    margin: 39px 0 39px 0;
-  
-    img {
-      width: 70%;
-      height: 100%;
-    }
   }
+
+  footer {
+    width: 1263px;
+  }
+
+}
+
+@media (min-width: 961px) and (max-width:1024px) {
+  #wrapper {
+    width: 1331px;
+  }
+
+  .nav-principal ul {
+    width: 1180px;
+  }
+
+  .search-input {
+    display: flex;
+    align-items: center;
+    margin-left: 361px;
+  }
+
+  .products-info-container {
+    width: 1302px;
+  }
+
+  .section-container {
+    width: 1388px;
+  }
+
+  footer {
+    width: 1263px;
+  }
+
 }
