--- a/scss/pages/_sections.scss
+++ b/scss/pages/_sections.scss
@@ -14,10 +14,113 @@
   margin-top: 200px;
 }
 
-@media (min-width: 768px) and (max-width:960px){
-  .option-product {
-    position: relative;
-    top: -144px;
-    left: 417px;
+@media (max-width: 640px) {
+  #wrapper {
+    width: 1277px;
   }
+
+  .products-info-container {
+    display: block;
+  }
+
+  .section-container {
+    height: 1004px;
+    width: 870px;
+  }
+
+  .section-topic {
+    width: 867px;
+  }
+
+  .nav-principal ul {
+    width: 1177px;
+  }
+
+  .search-input {
+    display: flex;
+    align-items: center;
+    margin-left: 361px;
+  }
+
+  .option-product {
+    left: 631px;
+  }
+
+  footer {
+    width: 1229px;
+  }
+}
+
+@media (min-width: 641px) and (max-width:960px) {
+  #wrapper {
+    width: 1331px;
+  }
+
+  .nav-principal ul {
+    width: 1180px;
+  }
+
+  .search-input {
+    display: flex;
+    align-items: center;
+    margin-left: 361px;
+  }
+
+  .section-topic {
+    width: 1228px;
+  }
+
+  .products-info-container {
+    width: 1302px;
+  }
+
+  .section-container {
+    width: 1392px;
+  }
+
+  .option-product {
+    left: 378px;
+  }
+
+  footer {
+    width: 1263px;
+  }
+
+}
+
+@media (min-width: 961px) and (max-width:1024px) {
+  #wrapper {
+    width: 1331px;
+  }
+
+  .nav-principal ul {
+    width: 1180px;
+  }
+
+  .search-input {
+    display: flex;
+    align-items: center;
+    margin-left: 361px;
+  }
+
+  .section-topic {
+    width: 1286px;
+  }
+
+  .products-info-container {
+    width: 1302px;
+  }
+
+  .section-container {
+    width: 1388px;
+  }
+
+  .option-product {
+    left: 419px;
+  }
+
+  footer {
+    width: 1263px;
+  }
+
 }
