--- a/css/styles.css
+++ b/css/styles.css
@@ -438,10 +438,7 @@ footer {
 
 .cart {
   width: 93%;
-  /* display: flex; */
   margin: 0 auto;
-  /* box-shadow: 10px 12px 7px -1px rgb(0 0 0 / 25%); */
-  /* border-radius: 84px; */
   margin-top: 20px;
   position: relative;
   margin-bottom: 100px;
@@ -616,6 +613,50 @@ footer {
     width: 25px;
   }
 }
+.cart-empty-content {
+  width: 93%;
+  margin: 0 auto;
+  margin-top: 20px;
+  position: relative;
+  margin-bottom: 100px;
+}
+.cart-empty-content a {
+  color: black;
+}
+.cart-empty-content h2 {
+  font-weight: 700;
+}
+
+.cart-empty-block {
+  width: 100%;
+  background-color: #FEEB9C;
+  box-shadow: 10px 12px 7px -1px rgba(0, 0, 0, 0.25);
+  border-radius: 84px;
+  min-height: 650px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  padding: 50px 0;
+}
+
+.cart-empty-buttom-button {
+  background: #FFFFFF;
+  box-shadow: 10px 12px 7px rgba(0, 0, 0, 0.25);
+  border-radius: 25px;
+  padding: 1%;
+  justify-content: space-between;
+  position: absolute;
+  top: 95%;
+  left: 10%;
+}
+.cart-empty-buttom-button a {
+  text-decoration: none;
+}
+.cart-empty-buttom-button a h3 {
+  font-weight: 600;
+}
+
 .contact h2 {
   text-align: center;
   margin-top: 150px;
