Se agrega responsive

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,6 +1,6 @@
 @import 'design_system';
 @import 'index';
-@import 'card_page';
+@import 'pages/card_page';
 @import 'about_us';
 @import 'cart-page';
 @import 'cart-page-empty';
