--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -1,9 +1,12 @@
+
 #wrapper {
   width: 100%;
   height: 100%;
   background-image: url(../img/Fondo.png);
   background-repeat: no-repeat;
 }
+
+
 
 .content {
   margin: 0 auto;
@@ -46,7 +49,6 @@
   margin-top: 150px;
   padding-bottom: 150px;
   padding: 20px 0px 20px 20px;
-  width: 75%;
   background: #FEEB9C;
   box-shadow: 10px 12px 7px -1px rgba(0, 0, 0, 0.25);
   border-radius: 36px;
@@ -54,5 +56,111 @@
 
 .second-ad--box a {
   position: absolute;
-  left: 550px;
+  left: 750px;
+}
+
+@media (max-width: 640px) {
+  #wrapper {
+    width: 100%;
+  }
+
+  .principal-ad {
+    width: 98%;
+  }
+
+  .principal-ad a {
+    padding: 41px 90px;
+    margin-left: 541px;
+  }
+
+  .second-ad--box{
+    margin-top: 90px;
+  }
+
+  .second-ad--box a {
+    position: absolute;
+    left: 371px;
+  }
+  
+  .second-ad--box{
+    width: 75%;
+  }
+}
+
+@media (min-width: 641px) and (max-width: 960px) {
+  #wrapper {
+    width: 100%;
+  }
+
+  .navigation {
+    display: none;
+  }
+
+  h1 {
+    font-size: 60px;
+  }
+  
+  h2 {
+    font-size: 40px;
+  } 
+
+  .principal-ad {
+    width: 70%;
+  }
+
+  .principal-ad a {
+    padding: 20px 30px;
+    margin-left: 470px;
+  }
+
+  .second-ad {
+    padding: 75px 0px 75px 75px;
+    padding-bottom: 150px;
+  }
+
+  .second-ad--box{
+    margin-top: 90px;
+  }
+
+  .second-ad--box a {
+    position: absolute;
+    left: 512px;
+  }
+}
+
+
+@media (min-width: 961px)  and (max-width: 1024px) {
+  #wrapper {
+    width: 100%;
+  }
+
+  .navigation {
+    display: none;
+  }
+
+  .principal-ad {
+    margin-top: 50px;
+    width: 70%;
+  }
+  
+  .principal-ad a {
+    position: relative;
+    padding: 30px 40px;
+    margin-top: 30px;
+    margin-left: 460px;
+  }
+  
+  .second-ad {
+    padding-bottom: 150px;
+  }
+  
+  .second-ad--box {
+    position: relative;
+    margin-top: 150px;
+  }
+  
+  .second-ad--box a {
+    position: absolute;
+    left: 512px;
+  }
 }
