--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -80,3 +80,17 @@
 .contact__input:active, .contact__input:valid, .contact__input--email:active, .contact__input--email:active,.contact__box-text:active ,button:active {
   transform: scale(0.80);
 }
+
+
+@media (max-width: 640px) {
+
+}
+
+
+@media (min-width: 641px) and (max-width: 960px) {
+
+}
+
+@media (min-width: 961px)  and (max-width: 1024px) {
+  
+}
