--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -10,3 +10,5 @@
 @import 'components/price-square';
 @import 'pages/sections';
 @import 'components/card-beige';
+@import 'components/footer';
+@import 'components/nav';
