--- a/css/styles.css
+++ b/css/styles.css
@@ -336,7 +336,6 @@ footer {
   margin-top: 150px;
   padding-bottom: 150px;
   padding: 20px 0px 20px 20px;
-  width: 75%;
   background: #FEEB9C;
   box-shadow: 10px 12px 7px -1px rgba(0, 0, 0, 0.25);
   border-radius: 36px;
@@ -344,22 +343,123 @@ footer {
 
 .second-ad--box a {
   position: absolute;
-  left: 550px;
+  left: 750px;
 }
 
+@media (max-width: 640px) {
+  #wrapper {
+    width: 100%;
+  }
+
+  .principal-ad {
+    width: 98%;
+  }
+
+  .principal-ad a {
+    padding: 41px 90px;
+    margin-left: 541px;
+  }
+
+  .second-ad--box {
+    margin-top: 90px;
+  }
+
+  .second-ad--box a {
+    position: absolute;
+    left: 371px;
+  }
+
+  .second-ad--box {
+    width: 75%;
+  }
+}
+@media (min-width: 641px) and (max-width: 960px) {
+  #wrapper {
+    width: 100%;
+  }
+
+  .navigation {
+    display: none;
+  }
+
+  h1 {
+    font-size: 60px;
+  }
+
+  h2 {
+    font-size: 40px;
+  }
+
+  .principal-ad {
+    width: 70%;
+  }
+
+  .principal-ad a {
+    padding: 20px 30px;
+    margin-left: 470px;
+  }
+
+  .second-ad {
+    padding: 75px 0px 75px 75px;
+    padding-bottom: 150px;
+  }
+
+  .second-ad--box {
+    margin-top: 90px;
+  }
+
+  .second-ad--box a {
+    position: absolute;
+    left: 512px;
+  }
+}
+@media (min-width: 961px) and (max-width: 1024px) {
+  #wrapper {
+    width: 100%;
+  }
+
+  .navigation {
+    display: none;
+  }
+
+  .principal-ad {
+    margin-top: 50px;
+    width: 70%;
+  }
+
+  .principal-ad a {
+    position: relative;
+    padding: 30px 40px;
+    margin-top: 30px;
+    margin-left: 460px;
+  }
+
+  .second-ad {
+    padding-bottom: 150px;
+  }
+
+  .second-ad--box {
+    position: relative;
+    margin-top: 150px;
+  }
+
+  .second-ad--box a {
+    position: absolute;
+    left: 512px;
+  }
+}
 .product-card {
-  margin-bottom: -320px;
+  display: flex;
+  margin-bottom: 270px;
 }
 
 .product-card--box {
-  padding: 0px 0px 60px 0px;
   text-align: center;
-  width: 40%;
-  position: relative;
+  display: flex;
+  justify-content: center;
   background: #feeb9c;
   box-shadow: 10px 12px 7px -1px rgba(0, 0, 0, 0.25);
   border-radius: 84px;
-  margin-top: 150px;
 }
 
 .product-card--box img:hover {
@@ -369,16 +469,19 @@ footer {
 
 .product-card--box a {
   position: absolute;
-  top: 520px;
-  left: 20px;
+}
+
+.product-card__box--white {
+  text-align: center;
+  text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.179);
 }
 
 .product-card__small-box {
   position: absolute;
-  width: 40%;
-  padding: 40px;
   background: #fff8db;
   border-radius: 160px 0px 86px;
+  padding: 40px;
+  width: 40%;
   bottom: 0;
   right: 0;
 }
@@ -388,21 +491,9 @@ footer {
   transition: all 1s;
 }
 
-.product-card__box--white {
-  background-image: url(../img/blur-rectangle2.svg);
-  background-repeat: no-repeat;
-  text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.103);
-  text-align: center;
-  padding: 50px;
-  left: 750px;
-  bottom: 600px;
-  position: relative;
-  width: 45%;
-}
-
 .product-card__box--white button {
   position: relative;
-  top: 60px;
+  top: 727px;
 }
 
 .product-card--especifications, ul {
@@ -415,9 +506,114 @@ footer {
   text-align: start;
 }
 
+@media (max-width: 640px) {
+  #wrapper {
+    width: 100%;
+  }
+
+  .product-card {
+    flex-direction: column-reverse;
+  }
+
+  .product-card--box {
+    padding: 0px 0px 60px 0px;
+    text-align: center;
+    position: relative;
+  }
+
+  .product-card__box--white {
+    margin-top: 60px;
+  }
+
+  .product-card--box a {
+    top: 520px;
+    left: 20px;
+  }
+}
+@media (min-width: 641px) and (max-width: 960px) {
+  #wrapper {
+    width: 100%;
+  }
+
+  .product-card {
+    margin-bottom: 270px;
+  }
+
+  .product-card--box a {
+    top: 470px;
+    left: 20px;
+  }
+
+  .product-card--box {
+    width: 50%;
+    position: relative;
+    margin-top: 150px;
+  }
+
+  .product-card__box--white {
+    left: 50px;
+    bottom: -137px;
+    position: relative;
+    width: 45%;
+  }
+
+  .product-card__box--white button {
+    position: relative;
+    top: 42px;
+  }
+}
+@media (min-width: 961px) {
+  #wrapper {
+    width: 100%;
+  }
+
+  .product-card {
+    margin-bottom: 320px;
+  }
+
+  .product-card--box {
+    padding: 0px 0px 60px 0px;
+    text-align: center;
+    width: 40%;
+    position: relative;
+    background: #feeb9c;
+    box-shadow: 10px 12px 7px -1px rgba(0, 0, 0, 0.25);
+    border-radius: 84px;
+    margin-top: 150px;
+  }
+
+  .product-card--box a {
+    position: absolute;
+    top: 520px;
+    left: 20px;
+  }
+
+  .product-card__small-box {
+    position: absolute;
+    width: 40%;
+    padding: 40px;
+    background: #fff8db;
+    border-radius: 160px 0px 86px;
+    bottom: 0;
+    right: 0;
+  }
+
+  .product-card__box--white {
+    text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.103);
+    text-align: center;
+    padding: 50px;
+    left: 92px;
+    bottom: -110px;
+    position: relative;
+    width: 50%;
+  }
+
+  .product-card__box--white button {
+    position: relative;
+    top: 113px;
+  }
+}
 .about-us {
-  background-image: url(../img/blur-rectangle.svg);
-  background-repeat: no-repeat;
   text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.103);
   padding-bottom: 90px;
   padding-top: 90px;
@@ -430,8 +626,43 @@ footer {
 
 .about-us h3 {
   text-align: center;
+  font-size: 50px;
 }
 
+@media (max-width: 640px) {
+  #wrapper {
+    width: 100%;
+  }
+
+  .about-us__content {
+    text-align: center;
+    display: block;
+  }
+
+  .about-us__content p {
+    font-size: 40px;
+  }
+}
+@media (min-width: 641px) and (max-width: 960px) {
+  #wrapper {
+    width: 100%;
+  }
+
+  .about-us__content {
+    text-align: center;
+    display: block;
+  }
+}
+@media (min-width: 961px) and (max-width: 1024px) {
+  #wrapper {
+    width: 100%;
+  }
+
+  .about-us__content {
+    text-align: center;
+    display: block;
+  }
+}
 .cart-page {
   width: 100vw;
 }
@@ -565,24 +796,31 @@ footer {
   h2 {
     font-size: 25px;
   }
+
   h3 {
     font-size: 22px;
   }
+
   p {
     font-size: 21px;
   }
+
   .cart-block {
     min-height: 500px;
   }
+
   .cart-product-column__product {
     padding: 18px 0;
   }
+
   .cart-price-column__price {
     padding: 18px 0;
   }
+
   .cart-delete-column {
     gap: 65px;
   }
+
   .cart-delete-column__button {
     width: 18px;
   }
@@ -591,24 +829,31 @@ footer {
   h2 {
     font-size: 35px;
   }
+
   h3 {
     font-size: 32px;
   }
+
   p {
     font-size: 31px;
   }
+
   .cart-block {
     min-height: 600px;
   }
+
   .cart-product-column__product {
     padding: 10px;
   }
+
   .cart-price-column__price {
     padding: 10px;
   }
+
   .cart-delete-column {
     gap: 50px;
   }
+
   .cart-delete-column__button {
     width: 25px;
   }
@@ -777,25 +1022,31 @@ footer {
   #wrapper {
     width: 1277px;
   }
+
   .products-info-container {
     display: block;
   }
+
   .section-container {
     height: 1147px;
     width: 814px;
   }
+
   .nav-principal ul {
     width: 1177px;
   }
+
   .search-input {
     display: flex;
     align-items: center;
     margin-left: 361px;
   }
+
   .product-square__yellow {
     width: 785px;
     height: 422px;
   }
+
   footer {
     width: 1229px;
   }
@@ -804,20 +1055,25 @@ footer {
   #wrapper {
     width: 1331px;
   }
+
   .nav-principal ul {
     width: 1180px;
   }
+
   .search-input {
     display: flex;
     align-items: center;
     margin-left: 361px;
   }
+
   .products-info-container {
     width: 1302px;
   }
+
   .section-container {
     width: 1392px;
   }
+
   footer {
     width: 1263px;
   }
@@ -826,20 +1082,25 @@ footer {
   #wrapper {
     width: 1331px;
   }
+
   .nav-principal ul {
     width: 1180px;
   }
+
   .search-input {
     display: flex;
     align-items: center;
     margin-left: 361px;
   }
+
   .products-info-container {
     width: 1302px;
   }
+
   .section-container {
     width: 1388px;
   }
+
   footer {
     width: 1263px;
   }
@@ -920,27 +1181,34 @@ footer {
   #wrapper {
     width: 1277px;
   }
+
   .products-info-container {
     display: block;
   }
+
   .section-container {
     height: 1004px;
     width: 870px;
   }
+
   .section-topic {
     width: 867px;
   }
+
   .nav-principal ul {
     width: 1177px;
   }
+
   .search-input {
     display: flex;
     align-items: center;
     margin-left: 361px;
   }
+
   .option-product {
     left: 631px;
   }
+
   footer {
     width: 1229px;
   }
@@ -949,26 +1217,33 @@ footer {
   #wrapper {
     width: 1331px;
   }
+
   .nav-principal ul {
     width: 1180px;
   }
+
   .search-input {
     display: flex;
     align-items: center;
     margin-left: 361px;
   }
+
   .section-topic {
     width: 1228px;
   }
+
   .products-info-container {
     width: 1302px;
   }
+
   .section-container {
     width: 1392px;
   }
+
   .option-product {
     left: 378px;
   }
+
   footer {
     width: 1263px;
   }
@@ -977,26 +1252,33 @@ footer {
   #wrapper {
     width: 1331px;
   }
+
   .nav-principal ul {
     width: 1180px;
   }
+
   .search-input {
     display: flex;
     align-items: center;
     margin-left: 361px;
   }
+
   .section-topic {
     width: 1286px;
   }
+
   .products-info-container {
     width: 1302px;
   }
+
   .section-container {
     width: 1388px;
   }
+
   .option-product {
     left: 419px;
   }
+
   footer {
     width: 1263px;
   }
@@ -1028,6 +1310,368 @@ footer {
 @media (min-width: 961px) and (max-width: 1024px) {
   .product-square__beige {
     width: 570px;
+  }
+}
+/*Footer*/
+footer {
+  padding: 0;
+  align-items: center;
+  background: #4E4E4E;
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  padding: 50px;
+}
+
+.footer__questions ul {
+  align-items: center;
+  font-size: 24px;
+  list-style: none;
+  text-decoration: none;
+}
+
+.footer__copyright {
+  text-align: center;
+}
+.footer__copyright p {
+  font-size: 20px;
+}
+
+.footer__social {
+  margin-right: 50px;
+  position: relative;
+  text-align: center;
+  top: -45px;
+}
+
+@media (max-width: 640px) {
+  footer {
+    width: 1177px;
+    flex-direction: column-reverse;
+  }
+
+  .footer__social {
+    margin-bottom: 20px;
+  }
+
+  .footer__questions {
+    margin-bottom: 70px;
+  }
+
+  .footer__questions ul {
+    font-size: 50px;
+  }
+}
+@media (min-width: 641px) and (max-width: 960px) {
+  footer {
+    width: 1231px;
+    flex-direction: column-reverse;
+  }
+
+  .footer__social {
+    margin-bottom: 20px;
+  }
+
+  .footer__questions {
+    margin-bottom: 70px;
+  }
+
+  .footer__questions ul {
+    font-size: 50px;
+  }
+}
+@media (min-width: 961px) and (max-width: 1024px) {
+  footer {
+    width: 1231px;
+  }
+}
+/*Navegación*/
+#navigation__menu, .logo-pagina {
+  display: none;
+}
+
+.nav-principal ul {
+  list-style: none;
+  display: flex;
+  justify-content: space-around;
+  margin-top: 65px;
+  margin-bottom: 75px;
+}
+
+.nav-principal a {
+  text-decoration: none;
+  color: black;
+  font-style: italic;
+  font-weight: 700;
+  font-size: 32px;
+}
+
+.nav-principal a:hover {
+  transition: all 0.2s;
+  text-shadow: 5px 5px 6px rgba(0, 0, 0, 0.36);
+}
+
+.search-input {
+  display: flex;
+  align-items: center;
+  margin-left: 650px;
+}
+
+.search-input__bar {
+  box-shadow: 5px 5px 6px rgba(0, 0, 0, 0.36);
+  min-height: 75px;
+  min-width: 500px;
+  padding: 10px 5px;
+  font-size: 15px;
+  border: none;
+  background: #fff8DB;
+  border-radius: 87px 0px 0px 87px;
+}
+
+.search-input__bar::placeholder, textarea {
+  padding-left: 37px;
+  font-style: italic;
+  font-weight: 500;
+  font-size: 32px;
+}
+
+.button--submit {
+  box-shadow: 5px 5px 6px rgba(0, 0, 0, 0.36);
+  min-height: 65px;
+  padding: 5px 50px;
+  border: none;
+  border-radius: 0px 87px 87px 0px;
+  background: #fff8DB;
+  transition: background-color 0.3s ease-in-out;
+  width: 30px;
+}
+
+.search-input__bar:focus {
+  padding-left: 37px;
+  font-style: italic;
+  font-weight: 500;
+  font-size: 32px;
+  outline: none;
+}
+
+@media (max-width: 640px) {
+  .logo-pagina {
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .logo-pagina img {
+    padding-top: 25px;
+  }
+
+  .nav-principal {
+    display: none;
+  }
+
+  .search-input {
+    display: none;
+  }
+
+  #navigation__menu {
+    display: block;
+    position: relative;
+    top: 50px;
+    left: 50px;
+    z-index: 1;
+  }
+
+  #navigation__menu a {
+    text-decoration: none;
+    color: #232323;
+    transition: color 0.3s ease;
+  }
+
+  #navigation__menu input {
+    display: block;
+    width: 40px;
+    height: 32px;
+    position: absolute;
+    top: -7px;
+    left: -5px;
+    cursor: pointer;
+    opacity: 0;
+    z-index: 2;
+  }
+
+  #navigation__menu span {
+    display: block;
+    width: 33px;
+    height: 4px;
+    margin-bottom: 5px;
+    position: relative;
+    background: #000000;
+    border-radius: 3px;
+    z-index: 1;
+    transform-origin: 4px 0px;
+    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
+  }
+
+  #navigation__menu span:first-child {
+    transform-origin: 0% 0%;
+  }
+
+  #navigation__menu span:nth-last-child(2) {
+    transform-origin: 0% 100%;
+  }
+
+  #navigation__menu input:checked ~ span {
+    opacity: 1;
+    transform: rotate(45deg) translate(-2px, -1px);
+    background: #232323;
+  }
+
+  #navigation__menu input:checked ~ span:nth-last-child(3) {
+    opacity: 0;
+    transform: rotate(0deg) scale(0.2, 0.2);
+  }
+
+  #navigation__menu input:checked ~ span:nth-last-child(2) {
+    transform: rotate(-45deg) translate(0, -1px);
+  }
+
+  #navigation__links {
+    position: absolute;
+    margin: -100px 0 0 -50px;
+    padding: 50px;
+    width: 300px;
+    padding-top: 125px;
+    background: #fff8DB;
+    list-style-type: none;
+    transform-origin: 0% 0%;
+    transform: translate(-100%, 0);
+    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+    border-radius: 50px;
+  }
+
+  #navigation__links li {
+    padding: 10px 0;
+    font-size: 22px;
+    font-weight: 700;
+    font-size: 32px;
+  }
+
+  #navigation__links li:hover {
+    transition: all 0.2s;
+    text-shadow: 5px 5px 6px rgba(0, 0, 0, 0.36);
+  }
+
+  #navigation__menu input:checked ~ ul {
+    transform: none;
+  }
+}
+@media (min-width: 641px) and (max-width: 960px) {
+  .logo-pagina {
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .logo-pagina img {
+    padding-top: 25px;
+  }
+
+  .nav-principal {
+    display: none;
+  }
+
+  .search-input {
+    display: none;
+  }
+
+  #navigation__menu {
+    display: block;
+    position: relative;
+    top: 50px;
+    left: 50px;
+    z-index: 1;
+  }
+
+  #navigation__menu a {
+    text-decoration: none;
+    color: #232323;
+    transition: color 0.3s ease;
+  }
+
+  #navigation__menu input {
+    display: block;
+    width: 40px;
+    height: 32px;
+    position: absolute;
+    top: -7px;
+    left: -5px;
+    cursor: pointer;
+    opacity: 0;
+    z-index: 2;
+  }
+
+  #navigation__menu span {
+    display: block;
+    width: 33px;
+    height: 4px;
+    margin-bottom: 5px;
+    position: relative;
+    background: #000000;
+    border-radius: 3px;
+    z-index: 1;
+    transform-origin: 4px 0px;
+    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
+  }
+
+  #navigation__menu span:first-child {
+    transform-origin: 0% 0%;
+  }
+
+  #navigation__menu span:nth-last-child(2) {
+    transform-origin: 0% 100%;
+  }
+
+  #navigation__menu input:checked ~ span {
+    opacity: 1;
+    transform: rotate(45deg) translate(-2px, -1px);
+    background: #232323;
+  }
+
+  #navigation__menu input:checked ~ span:nth-last-child(3) {
+    opacity: 0;
+    transform: rotate(0deg) scale(0.2, 0.2);
+  }
+
+  #navigation__menu input:checked ~ span:nth-last-child(2) {
+    transform: rotate(-45deg) translate(0, -1px);
+  }
+
+  #navigation__links {
+    position: absolute;
+    margin: -100px 0 0 -50px;
+    padding: 50px;
+    width: 300px;
+    padding-top: 125px;
+    background: #fff8DB;
+    list-style-type: none;
+    transform-origin: 0% 0%;
+    transform: translate(-100%, 0);
+    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+    border-radius: 50px;
+  }
+
+  #navigation__links li {
+    padding: 10px 0;
+    font-size: 22px;
+    font-weight: 700;
+    font-size: 32px;
+  }
+
+  #navigation__links li:hover {
+    transition: all 0.2s;
+    text-shadow: 5px 5px 6px rgba(0, 0, 0, 0.36);
+  }
+
+  #navigation__menu input:checked ~ ul {
+    transform: none;
   }
 }
 
