--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,14 +1,14 @@
-@import 'design_system';
-@import 'index';
-@import 'pages/card_page';
-@import 'about_us';
-@import 'cart-page';
-@import 'cart-page-empty';
-@import 'contact';
-@import 'pages/products';
 @import 'components/card-yellow';
 @import 'components/price-square';
-@import 'pages/sections';
-@import 'components/card-beige';
-@import 'components/footer';
 @import 'components/nav';
+@import 'components/footer';
+@import 'components/card-beige';
+@import 'design_system';
+@import 'index';
+@import 'pages/products';
+@import 'pages/card_page';
+@import 'cart-page-empty';
+@import 'cart-page';
+@import 'pages/about_us';
+@import 'pages/contact';
+@import 'pages/sections';
