--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -32,6 +32,10 @@ footer {
 }
 
 @media (max-width: 640px) {
+  h3 {
+    font-size: 50px;
+  }
+
   footer {
     width: 1177px;
     flex-direction: column-reverse;
@@ -52,6 +56,10 @@ footer {
 }
 
 @media (min-width: 641px) and (max-width:960px) {
+  h3 {
+    font-size: 50px;
+  }
+
   footer {
     width: 1231px;
     flex-direction: column-reverse;
