--- a/scss/pages/_contact.scss
+++ b/scss/pages/_contact.scss
@@ -1,5 +1,3 @@
-
-
 .contact h2 {
   text-align: center;
   margin-top: 150px;
@@ -83,14 +81,47 @@
 
 
 @media (max-width: 640px) {
+  #wrapper {
+    width: 100%;
+  }
+
+  h2 {
+    font-size: 48px;
+  }
+
+  .contact__form {
+    margin: 0;
+    justify-content: space-around;
+    margin-bottom: 125px;
+  }
 
 }
 
 
 @media (min-width: 641px) and (max-width: 960px) {
+  #wrapper {
+    width: 100%;
+  }
 
+  h2 {
+    font-size: 48px;
+  }
+
+  .contact__form {
+    margin: 0;
+    justify-content: space-around;
+    margin-bottom: 125px;
+  }
 }
 
 @media (min-width: 961px)  and (max-width: 1024px) {
-  
+  #wrapper {
+    width: 100%;
+  }
+
+  .contact__form {
+    margin: 0;
+    justify-content: space-around;
+    margin-bottom: 125px;
+  }
 }
