--- a/scss/_cart-page-empty.scss
+++ b/scss/_cart-page-empty.scss
@@ -12,6 +12,11 @@
   h2 {
     font-weight: 700;
   }
+
+  img{
+    width: 60%;
+    margin: 50px 0;
+  }
 }
 
 .cart-empty-block {
@@ -19,7 +24,7 @@
   background-color: #FEEB9C;
   box-shadow: 10px 12px 7px -1px rgb(0 0 0 / 25%);
   border-radius: 84px;
-  min-height: 650px;
+  height: fit-content;
   display: flex;
   flex-direction: column;
   align-items: center;
