--- a/scss/_cart-page.scss
+++ b/scss/_cart-page.scss
@@ -130,16 +130,18 @@
 }
 
 @media (max-width: 640px) {
-  h2 {
-    font-size: 25px;
-  }
-
-  h3 {
-    font-size: 22px;
-  }
-
-  p {
-    font-size: 21px;
+  .cart{
+    h2 {
+      font-size: 25px;
+    }
+  
+    h3 {
+      font-size: 22px;
+    }
+  
+    p {
+      font-size: 21px;
+    }
   }
 
   .cart-block {
@@ -164,16 +166,18 @@
 }
 
 @media (min-width: 641px) and (max-width: 1100px) {
-  h2 {
-    font-size: 35px;
-  }
-
-  h3 {
-    font-size: 32px;
-  }
-
-  p {
-    font-size: 31px;
+  .cart{
+    h2 {
+      font-size: 35px;
+    }
+  
+    h3 {
+      font-size: 32px;
+    }
+  
+    p {
+      font-size: 31px;
+    }
   }
 
   .cart-block {
