--- a/scss/components/_price-square.scss
+++ b/scss/components/_price-square.scss
@@ -12,7 +12,7 @@
 @media (max-width: 640px) {
   .price-square {
     top: -181px;
-    left: 537px;
+    left: 499px;
   }
 }
 
@@ -26,6 +26,7 @@
 
 @media (min-width: 961px) and (max-width:1024px) {
   .price-square {
+    top: -180px;
     left: 285px;
   }
 }
