--- a/css/styles.css
+++ b/css/styles.css
@@ -41,7 +41,7 @@
 @media (max-width: 640px) {
   .price-square {
     top: -181px;
-    left: 537px;
+    left: 499px;
   }
 }
 @media (min-width: 641px) and (max-width: 960px) {
@@ -52,11 +52,14 @@
 }
 @media (min-width: 961px) and (max-width: 1024px) {
   .price-square {
+    top: -180px;
     left: 285px;
   }
 }
 /*Navegación*/
-#navigation__menu, .logo-pagina, .search-input {
+#navigation__menu,
+.logo-pagina,
+.search-input {
   display: none;
 }
 
@@ -98,7 +101,8 @@
   border-radius: 87px 0px 0px 87px;
 }
 
-.search-input__bar::placeholder, textarea {
+.search-input__bar::placeholder,
+textarea {
   padding-left: 37px;
   font-style: italic;
   font-weight: 500;
@@ -312,6 +316,14 @@
   }
   #navigation__menu input:checked ~ ul {
     transform: none;
+  }
+}
+@media (min-width: 961px) and (max-width: 1024px) {
+  .nav-principal ul {
+    width: 1229px;
+  }
+  .search-input {
+    margin-left: 364px;
   }
 }
 /*Footer*/
@@ -893,58 +905,40 @@ footer {
     display: block;
   }
   .section-container {
-    height: 1147px;
+    height: 1128px;
     width: 814px;
   }
-  .nav-principal ul {
-    width: 1177px;
+  .section-container {
+    margin-top: 75px;
   }
-  .search-input {
-    display: flex;
-    align-items: center;
-    margin-left: 361px;
+  .products-topic {
+    justify-content: space-between;
+  }
+  .price-position {
+    left: 32px;
   }
   .product-square__yellow {
     width: 785px;
     height: 422px;
-  }
-  footer {
-    width: 1229px;
   }
 }
 @media (min-width: 641px) and (max-width: 960px) {
   #wrapper {
     width: 1331px;
   }
-  .nav-principal ul {
-    width: 1180px;
-  }
-  .search-input {
-    display: flex;
-    align-items: center;
-    margin-left: 361px;
-  }
   .products-info-container {
     width: 1302px;
   }
   .section-container {
-    width: 1392px;
+    width: 1398px;
   }
-  footer {
-    width: 1263px;
+  .sections-container {
+    width: 1362px;
   }
 }
 @media (min-width: 961px) and (max-width: 1024px) {
   #wrapper {
     width: 1331px;
-  }
-  .nav-principal ul {
-    width: 1180px;
-  }
-  .search-input {
-    display: flex;
-    align-items: center;
-    margin-left: 361px;
   }
   .products-info-container {
     width: 1302px;
@@ -1498,20 +1492,39 @@ footer {
     margin-bottom: 125px;
   }
 }
-.option-product {
-  position: relative;
-  top: -144px;
-  left: 452px;
+.sections-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.section-topic {
-  width: 1382px;
+.section-container {
+  width: 1448px;
+  height: 518px;
+  margin: 39px 0 39px 0;
+}
+.section-container img {
+  width: 70%;
+  height: 100%;
+}
+
+.products-info-container {
+  display: flex;
+  justify-content: space-around;
+}
+
+.products-topic {
+  width: 666px;
   height: 83px;
   display: flex;
-  flex-direction: row;
   align-items: center;
-  gap: 356px;
-  margin-top: 200px;
+  justify-content: space-around;
+}
+
+.price-position {
+  position: relative;
+  top: 86px;
+  left: 79px;
 }
 
 @media (max-width: 640px) {
@@ -1522,41 +1535,26 @@ footer {
     display: block;
   }
   .section-container {
-    height: 1004px;
-    width: 870px;
+    height: 1147px;
+    width: 814px;
   }
-  .section-topic {
-    width: 867px;
+  .section-container {
+    margin-top: 75px;
   }
-  .nav-principal ul {
-    width: 1177px;
+  .products-topic {
+    justify-content: space-between;
   }
-  .search-input {
-    display: flex;
-    align-items: center;
-    margin-left: 361px;
+  .price-position {
+    left: 32px;
   }
-  .option-product {
-    left: 631px;
-  }
-  footer {
-    width: 1229px;
+  .product-square__yellow {
+    width: 785px;
+    height: 422px;
   }
 }
 @media (min-width: 641px) and (max-width: 960px) {
   #wrapper {
     width: 1331px;
-  }
-  .nav-principal ul {
-    width: 1180px;
-  }
-  .search-input {
-    display: flex;
-    align-items: center;
-    margin-left: 361px;
-  }
-  .section-topic {
-    width: 1228px;
   }
   .products-info-container {
     width: 1302px;
@@ -1564,36 +1562,19 @@ footer {
   .section-container {
     width: 1392px;
   }
-  .option-product {
-    left: 378px;
-  }
-  footer {
-    width: 1263px;
+  .sections-container {
+    margin-top: 50px;
   }
 }
 @media (min-width: 961px) and (max-width: 1024px) {
   #wrapper {
     width: 1331px;
   }
-  .nav-principal ul {
-    width: 1180px;
-  }
-  .search-input {
-    display: flex;
-    align-items: center;
-    margin-left: 361px;
-  }
-  .section-topic {
-    width: 1286px;
-  }
   .products-info-container {
     width: 1302px;
   }
   .section-container {
     width: 1388px;
-  }
-  .option-product {
-    left: 419px;
   }
   footer {
     width: 1263px;
