--- a/scss/components/_nav.scss
+++ b/scss/components/_nav.scss
@@ -1,5 +1,7 @@
 /*Navegación*/
-#navigation__menu, .logo-pagina, .search-input {
+#navigation__menu,
+.logo-pagina,
+.search-input {
   display: none;
 }
 
@@ -41,7 +43,8 @@
   border-radius: 87px 0px 0px 87px;
 }
 
-.search-input__bar::placeholder, textarea {
+.search-input__bar::placeholder,
+textarea {
   padding-left: 37px;
   font-style: italic;
   font-weight: 500;
@@ -67,7 +70,7 @@
   outline: none;
 }
 
-@media (max-width: 640px)  {
+@media (max-width: 640px) {
   .logo-pagina {
     display: flex;
     justify-content: space-around;
@@ -85,103 +88,103 @@
     display: none;
   }
 
-#navigation__menu {
-  display: block;
-  position: relative;
-  top: 50px;
-  left: 50px;
-  z-index: 1;
-}
+  #navigation__menu {
+    display: block;
+    position: relative;
+    top: 50px;
+    left: 50px;
+    z-index: 1;
+  }
 
-#navigation__menu a {
-  text-decoration: none;
-  color: #232323;
-  transition: color 0.3s ease;
-}
+  #navigation__menu a {
+    text-decoration: none;
+    color: #232323;
+    transition: color 0.3s ease;
+  }
 
-#navigation__menu input {
-  display: block;
-  width: 40px;
-  height: 32px;
-  position: absolute;
-  top: -7px;
-  left: -5px;
-  cursor: pointer;
-  opacity: 0; 
-  z-index: 2; 
-}
+  #navigation__menu input {
+    display: block;
+    width: 40px;
+    height: 32px;
+    position: absolute;
+    top: -7px;
+    left: -5px;
+    cursor: pointer;
+    opacity: 0;
+    z-index: 2;
+  }
 
-#navigation__menu span {
-  display: block;
-  width: 33px;
-  height: 4px;
-  margin-bottom: 5px;
-  position: relative;
-  background: #000000;
-  border-radius: 3px;
-  z-index: 1;
-  transform-origin: 4px 0px;
-  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0), background 0.5s cubic-bezier(0.77,0.2,0.05,1.0), opacity 0.55s ease;
-  box-shadow: 2px 1px 16px 5px rgba(0, 0, 0, 0.155);
-}
+  #navigation__menu span {
+    display: block;
+    width: 33px;
+    height: 4px;
+    margin-bottom: 5px;
+    position: relative;
+    background: #000000;
+    border-radius: 3px;
+    z-index: 1;
+    transform-origin: 4px 0px;
+    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0), background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0), opacity 0.55s ease;
+    box-shadow: 2px 1px 16px 5px rgba(0, 0, 0, 0.155);
+  }
 
-#navigation__menu span:first-child {
-  transform-origin: 0% 0%;
-}
+  #navigation__menu span:first-child {
+    transform-origin: 0% 0%;
+  }
 
-#navigation__menu span:nth-last-child(2) {
-  transform-origin: 0% 100%;
-}
-
-
-#navigation__menu input:checked ~ span {
-  opacity: 1;
-  transform: rotate(45deg) translate(-2px, -1px);
-  background: #232323;
-}
+  #navigation__menu span:nth-last-child(2) {
+    transform-origin: 0% 100%;
+  }
 
 
-#navigation__menu input:checked ~ span:nth-last-child(3) {
-  opacity: 0;
-  transform: rotate(0deg) scale(0.2, 0.2);
-}
+  #navigation__menu input:checked~span {
+    opacity: 1;
+    transform: rotate(45deg) translate(-2px, -1px);
+    background: #232323;
+  }
 
 
-#navigation__menu input:checked ~ span:nth-last-child(2) {
-  transform: rotate(-45deg) translate(0, -1px);
-}
-
-#navigation__links {
-  box-shadow: 2px 1px 16px 5px rgba(0, 0, 0, 0.404);
-  position: absolute;
-  margin: -100px 0 0 -50px;
-  padding: 50px;
-  width: 300px;
-  padding-top: 125px;
-  background: #fff8DB;
-  list-style-type: none;
-  transform-origin: 0% 0%;
-  transform: translate(-100%, 0);
-  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
-  border-radius: 50px;
-}
-
-#navigation__links li {
-  padding: 10px 0;
-  font-size: 22px;
-  font-weight: 700;
-  font-size: 32px;
-}
+  #navigation__menu input:checked~span:nth-last-child(3) {
+    opacity: 0;
+    transform: rotate(0deg) scale(0.2, 0.2);
+  }
 
 
-#navigation__links li:hover {
-  transition: all 0.2s;
-  text-shadow: 5px 5px 6px rgba(0, 0, 0, 0.049);
-}
+  #navigation__menu input:checked~span:nth-last-child(2) {
+    transform: rotate(-45deg) translate(0, -1px);
+  }
 
-#navigation__menu input:checked ~ ul {
-  transform: none;
-}
+  #navigation__links {
+    box-shadow: 2px 1px 16px 5px rgba(0, 0, 0, 0.404);
+    position: absolute;
+    margin: -100px 0 0 -50px;
+    padding: 50px;
+    width: 300px;
+    padding-top: 125px;
+    background: #fff8DB;
+    list-style-type: none;
+    transform-origin: 0% 0%;
+    transform: translate(-100%, 0);
+    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
+    border-radius: 50px;
+  }
+
+  #navigation__links li {
+    padding: 10px 0;
+    font-size: 22px;
+    font-weight: 700;
+    font-size: 32px;
+  }
+
+
+  #navigation__links li:hover {
+    transition: all 0.2s;
+    text-shadow: 5px 5px 6px rgba(0, 0, 0, 0.049);
+  }
+
+  #navigation__menu input:checked~ul {
+    transform: none;
+  }
 }
 
 @media (min-width: 641px) and (max-width: 960px) {
@@ -209,13 +212,13 @@
     left: 50px;
     z-index: 1;
   }
-  
+
   #navigation__menu a {
     text-decoration: none;
     color: #232323;
     transition: color 0.3s ease;
   }
-  
+
   #navigation__menu input {
     display: block;
     width: 40px;
@@ -224,10 +227,10 @@
     top: -7px;
     left: -5px;
     cursor: pointer;
-    opacity: 0; 
-    z-index: 2; 
+    opacity: 0;
+    z-index: 2;
   }
-  
+
   #navigation__menu span {
     display: block;
     width: 33px;
@@ -238,37 +241,37 @@
     border-radius: 3px;
     z-index: 1;
     transform-origin: 4px 0px;
-    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-                background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-                opacity 0.55s ease;
+    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
+      background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
+      opacity 0.55s ease;
   }
-  
+
   #navigation__menu span:first-child {
     transform-origin: 0% 0%;
   }
-  
+
   #navigation__menu span:nth-last-child(2) {
     transform-origin: 0% 100%;
   }
-  
-  
-  #navigation__menu input:checked ~ span {
+
+
+  #navigation__menu input:checked~span {
     opacity: 1;
     transform: rotate(45deg) translate(-2px, -1px);
     background: #232323;
   }
-  
-  
-  #navigation__menu input:checked ~ span:nth-last-child(3) {
+
+
+  #navigation__menu input:checked~span:nth-last-child(3) {
     opacity: 0;
     transform: rotate(0deg) scale(0.2, 0.2);
   }
-  
-  
-  #navigation__menu input:checked ~ span:nth-last-child(2) {
+
+
+  #navigation__menu input:checked~span:nth-last-child(2) {
     transform: rotate(-45deg) translate(0, -1px);
   }
-  
+
   #navigation__links {
     position: absolute;
     margin: -100px 0 0 -50px;
@@ -279,25 +282,34 @@
     list-style-type: none;
     transform-origin: 0% 0%;
     transform: translate(-100%, 0);
-    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
     border-radius: 50px;
   }
-  
+
   #navigation__links li {
     padding: 10px 0;
     font-size: 22px;
     font-weight: 700;
     font-size: 32px;
   }
-  
-  
+
+
   #navigation__links li:hover {
     transition: all 0.2s;
     text-shadow: 5px 5px 6px rgba(0, 0, 0, 0.36);
   }
-  
-  #navigation__menu input:checked ~ ul {
+
+  #navigation__menu input:checked~ul {
     transform: none;
   }
 }
 
+@media (min-width: 961px) and (max-width:1024px) {
+  .nav-principal ul {
+    width: 1229px;
+  }
+
+  .search-input {
+    margin-left: 364px;
+  }
+}
