--- a/scss/pages/_products.scss
+++ b/scss/pages/_products.scss
@@ -44,27 +44,25 @@
   }
 
   .section-container {
-    height: 1147px;
+    height: 1128px;
     width: 814px;
   }
 
-  .nav-principal ul {
-    width: 1177px;
+  .section-container {
+    margin-top: 75px;
   }
 
-  .search-input {
-    display: flex;
-    align-items: center;
-    margin-left: 361px;
+  .products-topic {
+    justify-content: space-between;
+  }
+
+  .price-position {
+    left: 32px;
   }
 
   .product-square__yellow {
     width: 785px;
     height: 422px;
-  }
-
-  footer {
-    width: 1229px;
   }
 }
 
@@ -73,43 +71,22 @@
     width: 1331px;
   }
 
-  .nav-principal ul {
-    width: 1180px;
-  }
-
-  .search-input {
-    display: flex;
-    align-items: center;
-    margin-left: 361px;
-  }
-
   .products-info-container {
     width: 1302px;
   }
 
   .section-container {
-    width: 1392px;
+    width: 1398px;
   }
 
-  footer {
-    width: 1263px;
+  .sections-container {
+    width: 1362px;
   }
-
 }
 
 @media (min-width: 961px) and (max-width:1024px) {
   #wrapper {
     width: 1331px;
-  }
-
-  .nav-principal ul {
-    width: 1180px;
-  }
-
-  .search-input {
-    display: flex;
-    align-items: center;
-    margin-left: 361px;
   }
 
   .products-info-container {
