--- a/scss/pages/_sections.scss
+++ b/scss/pages/_sections.scss
@@ -1,17 +1,37 @@
-.option-product {
-  position: relative;
-  top: -144px;
-  left: 452px;
+.sections-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.section-topic {
-  width: 1382px;
+.section-container {
+  width: 1448px;
+  height: 518px;
+  margin: 39px 0 39px 0;
+
+  img {
+    width: 70%;
+    height: 100%;
+  }
+}
+
+.products-info-container {
+  display: flex;
+  justify-content: space-around;
+}
+
+.products-topic {
+  width: 666px;
   height: 83px;
   display: flex;
-  flex-direction: row;
   align-items: center;
-  gap: 356px;
-  margin-top: 200px;
+  justify-content: space-around;
+}
+
+.price-position {
+  position: relative;
+  top: 86px;
+  left: 79px;
 }
 
 @media (max-width: 640px) {
@@ -24,50 +44,31 @@
   }
 
   .section-container {
-    height: 1004px;
-    width: 870px;
+    height: 1147px;
+    width: 814px;
   }
 
-  .section-topic {
-    width: 867px;
+  .section-container {
+    margin-top: 75px;
   }
 
-  .nav-principal ul {
-    width: 1177px;
+  .products-topic {
+    justify-content: space-between;
   }
 
-  .search-input {
-    display: flex;
-    align-items: center;
-    margin-left: 361px;
+  .price-position {
+    left: 32px;
   }
 
-  .option-product {
-    left: 631px;
-  }
-
-  footer {
-    width: 1229px;
+  .product-square__yellow {
+    width: 785px;
+    height: 422px;
   }
 }
 
 @media (min-width: 641px) and (max-width:960px) {
   #wrapper {
     width: 1331px;
-  }
-
-  .nav-principal ul {
-    width: 1180px;
-  }
-
-  .search-input {
-    display: flex;
-    align-items: center;
-    margin-left: 361px;
-  }
-
-  .section-topic {
-    width: 1228px;
   }
 
   .products-info-container {
@@ -78,33 +79,14 @@
     width: 1392px;
   }
 
-  .option-product {
-    left: 378px;
+  .sections-container {
+    margin-top: 50px;
   }
-
-  footer {
-    width: 1263px;
-  }
-
 }
 
 @media (min-width: 961px) and (max-width:1024px) {
   #wrapper {
     width: 1331px;
-  }
-
-  .nav-principal ul {
-    width: 1180px;
-  }
-
-  .search-input {
-    display: flex;
-    align-items: center;
-    margin-left: 361px;
-  }
-
-  .section-topic {
-    width: 1286px;
   }
 
   .products-info-container {
@@ -113,10 +95,6 @@
 
   .section-container {
     width: 1388px;
-  }
-
-  .option-product {
-    left: 419px;
   }
 
   footer {
